--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -150,10 +150,10 @@
     <string name="introduce_show_devices">Читайте разные гороскопы в одном приложении, на разных устройствах!</string>
     <string name="introduce_show_share">Делись гороскопами с друзьями в социальных сетях, и получай 7 дней на пользование приложением за каждый Share!</string>
     <string name="notice_url">http://brothers-rovers.3dn.ru/help6.1.ru.html</string>
-    <string name="trial_period">Пробный период</string>
-    <string name="trial_until">Пробный до</string>
-    <string name="trial_buyed">Неогранниченное время на пользавание приложением</string>
-    <string name="trial_title">Ваш пробный период для этого приложения закончился </string>
+    <string name="trial_period">Время до выбора</string>
+    <string name="trial_until">Время до</string>
+    <string name="trial_buyed">Реклама отключена</string>
+    <string name="trial_title">Пора сделать выбор </string>
     <string name="trial_byu_google">Купить приложение</string>
     <string name="trial_byu_google_desc_high">Вся реклама выключится</string>
     <string name="trial_get_thr">Оцени меня!</string>
@@ -162,7 +162,6 @@
     <string name="trial_get_ad_desc">Включится реклама</string>
     <string name="trial_price_paid_high">99руб.</string>
     <string name="trial_price_free">БЕСПЛ.</string>
-    <string name="trial_get_share_intent">Рекомендую!</string>
     <string name="clickable_string">Продолжая, вы принимаете условия нашего [пользавательского соглашения]</string>
     <string name="agreement_top">Соглашение:</string>
     <string name="agreement">Для пользователей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Я согласен бесплатно использовать приложение только в случае, если буду делиться контентом не реже 1 раза в неделю\n • Я согласен, что контент предоставляют сторонние интернет-сайты, и ничего против содержимого не имею\n\nДля правообладателей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Если эта информация принадлежит мне, и я не хочу, чтобы она свободно распространялась, я обязуюсь лично попытаться удалить эту информацию с сайтов, которые может открывать данный интернет-браузер\n • Если я не имею возможности удалить информацию с сайта я обязуюсь связаться с разработчиком данного приложения для переговоров об удалении возможности считывать информацию которая принадлежит мне, правообладателю\n\nКонтакты:\n • Роман Гаитбаев\n • romzesrover@gmail.com\n • vk.com/romzesrover</string>
