--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -428,10 +428,10 @@
     <string name="introduce_show_devices">Read differents horoscopes in one application, on different devices!</string>
     <string name="introduce_show_share">Share horoscopes with friend in social networks, and get 7 days to use the application for each Share!</string>
     <string name="notice_url">http://brothers-rovers.3dn.ru/help6.1.eng.html</string>
-    <string name="trial_period">Trial period</string>
-    <string name="trial_until">Trial until</string>
-    <string name="trial_buyed">Infinite time to use</string>
-    <string name="trial_title">Your trial period has ended for this application</string>
+    <string name="trial_period">Time until choose</string>
+    <string name="trial_until">Time until</string>
+    <string name="trial_buyed">Ad is disabled</string>
+    <string name="trial_title">Time to choose</string>
     <string name="trial_byu_google">Buy this app</string>
     <string name="trial_byu_google_desc_high">An advertisement will turn off</string>
     <string name="trial_get_thr">Rate this app</string>
@@ -440,7 +440,6 @@
     <string name="trial_get_ad_desc">An advertisement will turn on</string>
     <string name="trial_price_paid_high">$2.99</string>
     <string name="trial_price_free">FREE</string>
-    <string name="trial_get_share_intent">I recommend!</string>
     <string name="clickable_string">by clicking next, you are agree with our [user agreement]</string>
     <string name="agreement_top">Agreement:</string>
     <string name="agreement">For users:\n • I agree that the application performs the function of a conventional internet browser\n • I agree to use this app for free only if I will share content from this app often than 1 time per week\n • I agree that the content provided by third party Internet sites, and nothing against the content does not have the\n\nFor right holders:\n • I agree that the application performs the function of a conventional internet browser\n • If the information belongs to me, and I do not want her to be freely disseminated, I personally undertake to try to remove this information from sites that can open this Internet browser\n • If I am unable to delete the information from the site, I agree to contact the developer of the application to negotiate the removal of the possibility to read information that belongs to me, the right holder\n\nContact:\n • Roman Gaitbaev\n • romzesrover @ gmail. com\n • vk.com / romzesrover</string>
