--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -425,8 +425,7 @@
     <string name="introduce_date_check">Check your data is correct</string>
     <string name="introduce_time">SET BIRTH TIME</string>
     <string name="introduce_time_1">*this value used only goroskop.ru</string>
-    <string name="introduce_show_devices">Read differents horoscopes in one application, on different devices!</string>
-    <string name="introduce_show_share">Share horoscopes with friend in social networks, and get 7 days to use the application for each Share!</string>
+    <string name="introduce_show_devices">Read differents horoscopes by horoscope.com, yahoo.com and tarot.com in one application!</string>
     <string name="notice_url">http://brothers-rovers.3dn.ru/help6.1.eng.html</string>
     <string name="trial_period">Time until choose</string>
     <string name="trial_until">Time until</string>
